--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,29 @@
 
+body { font: 13px Helvetica, Arial; position: relative;}
+.message-box { padding: 3px; position: fixed; bottom: 0; width: 98%;  margin: 0}
+#message input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+#message button { width: 8%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+#messages { list-style-type: none; margin: 0; padding: 0; }
+#messages li { padding: 5px 10px; margin-bottom: 10px;}
+#messages li:nth-child(odd) { background: #eee; }
 
 .videoContainer .overlay {
     height: 100%;
     width: 100%;
-    position: absolute;
     top: 0px;
     left: 0px;
-    z-index: 10;
+    z-index: 1;
     background: black;
     opacity: 0.1;
+}
+
+.home, .messages {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo{
+	background: url("cardanos1.png");
 }
