--- a/assets/style.css
+++ b/assets/style.css
@@ -1,29 +1,138 @@
 
 body { font: 13px Helvetica, Arial; position: relative;}
-.message-box { padding: 3px; position: fixed; bottom: 0; width: 98%;  margin: 0}
-#message input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-#message button { width: 8%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+.message-box { padding: 3px; position: fixed; bottom: 0; width: 98%;  margin: 0; z-index: 3}
+#message input { border: 0; padding: 10px; width: 90%; margin-right: .5%; font-size: 28px;}
+#message button { width: 8%; background: rgb(130, 224, 255); border: none; padding: 10px; font-size: 28px;}
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; margin-bottom: 10px;}
 #messages li:nth-child(odd) { background: #eee; }
-
+.home {
+  position: relative;
+  z-index: 3;
+}
 .videoContainer .overlay {
     height: 100%;
     width: 100%;
+    position: fixed;
     top: 0px;
     left: 0px;
     z-index: 1;
     background: black;
-    opacity: 0.1;
+        opacity: 0.3;
 }
-
-.home, .messages {
+#signIn {
+  position: fixed;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.messages {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.logo{
-	background: url("cardanos1.png");
+
+.logo {
+    height: 100px;
+    position: relative;
+    top: 20px;
+    left: 20px;
+    background: url("cardanos1.png");
+    background-repeat: no-repeat;
+    background-size: 180px;
 }
+
+.taglineContainer{
+    text-align: center;
+    position: relative;
+    width: 900px;
+    margin: 0 auto;
+}
+
+.tagline{
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    font-size: 65px;
+    text-align: center;
+    padding: 30px 15px;
+    color: white;
+}
+
+.description{
+    font-family: 'Oswald', sans-serif;
+    font-size: 25px;
+    text-align: center;
+    padding: 30px 155px;
+    color: white;
+}
+
+.button {
+    font-family: 'Oswald', sans-serif;
+    background-color: #e7e7e7;
+    color: black;
+    border: none;
+    padding: 8px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+
+}
+
+.btn.btn-large {
+    font-size: 18px;
+    padding: 18px 35px;
+}
+.highlight-button {
+    border: 2px solid #000;
+    display: inline-block;
+    padding: 8px 20px 9px;
+    font-size: 12px;
+    color: #000;
+    background-color: transparent;
+}
+.button {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.btn {
+    display: inline-block;
+    letter-spacing: 1px;
+    border: 1px solid transparent;
+    border-radius: 0;
+    text-transform: uppercase;
+    width: auto;
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 600;
+        background: #fdd947 !important;
+      }
+
+#nickname {
+width: 190px;
+    font-size: 28px;
+    padding: 11px;
+    vertical-align: bottom;
+    margin-right: 20px;
+}
+#language {
+    border: none;
+    box-shadow: none;
+    background-image: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    cursor: pointer;
+    font-size: 11px;
+    letter-spacing: 1px;
+    margin-bottom: 0;
+    color: #999999;
+    border-radius: 0;
+    padding: 13px;
+    font-size: 28px;
+    vertical-align: bottom;
+    margin-right: 20px;
+    width: 220px;
+}
+
