User colors, user login/logout notification

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,11 +5,12 @@ body { font: 13px Helvetica, Arial; position: relative;}
 #message button { width: 8%; background: rgb(130, 224, 255); border: none; padding: 10px; font-size: 28px;}
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; margin-bottom: 10px;}
-#messages li:nth-child(odd) { background: #eee; }
 .home {
   position: relative;
   z-index: 3;
 }
+//#messages li:nth-child(odd) { background: #eee; }
+
 .videoContainer .overlay {
     height: 100%;
     width: 100%;
