--- a/assets/style.css
+++ b/assets/style.css
@@ -4,12 +4,11 @@ body { font: 13px Helvetica, Arial; position: relative;}
 #message input { border: 0; padding: 10px; width: 90%; margin-right: .5%; font-size: 28px;}
 #message button { width: 8%; background: rgb(130, 224, 255); border: none; padding: 10px; font-size: 28px;}
 #messages { list-style-type: none; margin: 0; padding: 0; }
-#messages li { padding: 5px 10px; margin-bottom: 10px;}
+#messages li { padding: 5px 10px; margin-bottom: 10px; font-size: 24px;}
 .home {
   position: relative;
   z-index: 3;
 }
-//#messages li:nth-child(odd) { background: #eee; }
 
 .videoContainer .overlay {
     height: 100%;
